# vve-brain_V1

./: .Daily_Routine_Start.py  .gitignore  Daily_Dev.bat  Daily_Routine_Start.py  LICENSE  README.md  SUMMRY_NEXT_SESSION.md  _BOD_EOD_test.py  create_brain.py  errors.txt  fix_docstrings.py  github_push.bat  github_push.py  install_dev_tools.bat  pyproject.toml  quality_check.py  run.bat  run.py  test_imports.py
.000check.bat/: 00_Opstarten_Gebruikers.md  README_Change_EXTRA_PP_OWNER.md  run_checks.bat
README_BRAIN/: INDEX.html  README00_Prerequisites.md  README01_Installation.md  README02_Architecture.md  README03_Governance_Audit.md  README04_Financial_Analysis.md  README05_Balance_Sheet.md  README06_Shock_Dashboard.md  README07_Recovery_Plan.md  README08_Data_Model.md  README09_API_Reference.md  README10_Troubleshooting.md  README11_Contributing.md  README_Contents_List.md
data/: Issue01_KC_2027.txt  Splitsingsakte.csv  alv_decisions.csv  alv_decisions.csv.txt  bank_transactions.csv  begroting_bestuur_2027.csv.txt  begrting_twinq_2027.csv.txt  budget_comparison.csv  contracts.csv  extra_parking_place.csv.txt  mjop_plan.csv  owners_complete.csv  splitsingsakte_clean.csv.txt  vve.duckdb
setup_help/: fix_docstrings.py
src/: .run_all_checks.bat  Sum_all_bijdragen.py  __init__.py  analyze_budgets.py  balance_sheet.py  check_all_data_eigenaren.py  combine_data_extraPP.py  compare_budgets.py  connect_data.py  data_loader.py  export_combined_data.py  financial_analysis.py  governance_audit.py  load_budget.py  owner_dashboard.py  recovery_plan.py  report_budget_issue.py  report_generator.py  run_all_checks.bat  sample_git_push.bat  shock_dashboard.py  terms_manager.py  validate_data.py  vve_brain.py
(+6 files in other folders)
