[project] 
name = "vve-brain" 
version = "0.1.0" 
description = "VVE Governance and Financial Management System" 
readme = "README.md" 
requires-python = ">=3.13" 
dependencies = [ 
    "pandas>=2.0.0", 
    "matplotlib>=3.7.0", 
    "plotly>=5.14.0", 
    "duckdb>=0.9.0", 
    "openpyxl>=3.1.0", 
    "wigglystuff>=0.5.0", 
] 
