[project] 
name = "vve-brain" 
version = "0.1.0" 
description = "VVE Governance and Financial Management System" 
readme = "README.md" 
requires-python = ">=3.13" 
dependencies = [
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "plotly>=5.14.0",
    "duckdb>=0.9.0",
    "openpyxl>=3.1.0",
    "wigglystuff>=0.5.0",
    "black>=26.5.1",
] 
[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "ruff>=0.4.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
]
