[project]
name = "vve-brain"
version = "0.1.0"
description = "VVE Governance and Financial Management System"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "marimo>=0.10.0",
    "pandas>=3.0.0",
    "duckdb>=1.5.0",
    "matplotlib>=3.10.0",
    "plotly>=6.0.0",
    "openpyxl>=3.1.0",
    "wigglystuff>=0.5.0",
]


[dependency-groups]
dev = [
    "black>=26.5.1",
    "pytest>=9.0.0",
    "ruff>=0.11.0",
]

[tool.ruff]
line-length = 150  # Changed from 100 to 150
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
